apps/phpipam/phpipam-db-statefulset.yaml
---
# Source: phpipam/templates/deployment.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: phpipam-db
  labels:
    app: phpipam
    component: mysql
    part-of: phpipam
spec:
  serviceName: phpipam
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: mysql
  template:
    metadata:
      name: phpipam-db
      labels:
        app: phpipam
        component: mysql
    spec:
      containers:
        - name: phpipam-db
          image: "mariadb:11.8.2"
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mysql
          volumeMounts:
            - name: phpipam-db
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 128Mi
      volumes:
        - name: phpipam-db
          persistentVolumeClaim:
            claimName: phpipam-postgres-data
